chart/templates/istio-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-helm-example-service
  namespace: argocd-helm-example-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gateway
  http:
    - match:
        port: 9000
      route:
      - destination:
          port:
            number: 80
          host: argocd-helm-example-service.argocd-helm-example-service.svc.cluster.local
